qa/apps/fhir-server/ad-hoc-queries.yml
apiVersion: v1
kind: Pod
metadata:
  name: clin-fhir-adhoc-queries
spec:
  containers:
  - command:
    - sleep
    - infinity
    image: ferlabcrsj/postgres-backup:9bb43092f76e95f17cd09f03a27c65d84112a3cd
    imagePullPolicy: IfNotPresent
    name: clin-fhir-adhoc-queries
    resources: {}
    volumeMounts:
    - mountPath: /opt/ca
      name: ca-certificate
      readOnly: true
  dnsPolicy: ClusterFirst
  enableServiceLinks: true
  imagePullSecrets:
  - name: images-pull
  restartPolicy: Never
  terminationGracePeriodSeconds: 30
  tolerations:
  - effect: NoExecute
    key: node.kubernetes.io/not-ready
    operator: Exists
    tolerationSeconds: 300
  - effect: NoExecute
    key: node.kubernetes.io/unreachable
    operator: Exists
    tolerationSeconds: 300
  volumes:
  - name: ca-certificate
    secret:
      defaultMode: 365
      secretName: postgres-qa-ca-certificate
