qa/apps/fhir-server/deployments-green-blue.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: clin-fhir-server-green
  name: clin-fhir-server-green
spec:
  replicas: 1
  selector:
    matchLabels:
      app: clin-fhir-server-green
  template:
    metadata:
      labels:
        app: clin-fhir-server-green
    spec:
      volumes:
        - name: postgres-ca-certificate
          secret:
            secretName: postgres-qa-ca-certificate
            defaultMode: 0555
      imagePullSecrets:
        - name: images-pull
      containers:
        - image: index.docker.io/ferlabcrsj/clin-fhir-server:c75dc5328cdbdf9be412b9127d9f0c2217c01342-1645801409 # {"$imagepolicy": "flux-clin-qa:fhir-server"}
          name: clin-fhir-server-green
          resources:
            requests:
              memory: "2048Mi"
              cpu: "1.00"
            limits:
              memory: "4096Mi"
              cpu: "2.00"
          volumeMounts:
            - name: postgres-ca-certificate
              mountPath: /opt/ca
              readOnly: true
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: clin-fhir-server-blue
  name: clin-fhir-server-blue
spec:
  replicas: 1
  selector:
    matchLabels:
      app: clin-fhir-server-blue
  template:
    metadata:
      labels:
        app: clin-fhir-server-blue
    spec:
      volumes:
        - name: postgres-ca-certificate
          secret:
            secretName: postgres-qa-ca-certificate
            defaultMode: 0555
      imagePullSecrets:
        - name: images-pull
      containers:
        - image: index.docker.io/ferlabcrsj/clin-fhir-server:c75dc5328cdbdf9be412b9127d9f0c2217c01342-1645801409 # {"$imagepolicy": "flux-clin-qa:fhir-server"}
          name: clin-fhir-server-blue
          resources:
            requests:
              memory: "2048Mi"
              cpu: "1.00"
            limits:
              memory: "4096Mi"
              cpu: "2.00"
          volumeMounts:
            - name: postgres-ca-certificate
              mountPath: /opt/ca
              readOnly: true
