qa/apps/fhir-server/deployments-override.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: clin-fhir-server
spec:
  template:
    spec:
      volumes:
        - name: postgres-ca-certificate
          secret:
            secretName: postgres-qa-ca-certificate
            defaultMode: 0555
      imagePullSecrets:
        - name: images-pull
      containers:
        - image: index.docker.io/ferlabcrsj/clin-fhir-server:de6657bc1068c7a614c00c65907be130770196e0-1637781119 # {"$imagepolicy": "flux-clin-qa:fhir-server"}
          name: clin-fhir-server
          resources:
            requests:
              memory: "2048Mi"
              cpu: "1.00"
            limits:
              memory: "4096Mi"
              cpu: "2.00"
          volumeMounts:
            - name: postgres-ca-certificate
              mountPath: /opt/ca
              readOnly: true
