qa/apps/fhir-server/service-override.yml
---
apiVersion: v1
kind: Service
metadata:
  name: clin-fhir-server
spec:
  selector:
    app: clin-fhir-server-blue
