qa/apps/fhir-server/ingresses.yml
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: clin-fhir-server
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: 10m
    nginx.ingress.kubernetes.io/proxy-read-timeout: "300"
spec:
  tls:
    - hosts:
        - fhir.qa.clin.ferlab.bio
      secretName: letsencrypt-certificate
  rules:
    - host: fhir.qa.clin.ferlab.bio
      http:
        paths:
          - path: /
            backend:
              serviceName: clin-fhir-server
              servicePort: 8080
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: clin-fhir-server-green
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: 10m
    nginx.ingress.kubernetes.io/proxy-read-timeout: "300"
spec:
  tls:
    - hosts:
        - fhir-green.qa.clin.ferlab.bio
      secretName: letsencrypt-certificate
  rules:
    - host: fhir-green.qa.clin.ferlab.bio
      http:
        paths:
          - path: /
            backend:
              serviceName: clin-fhir-server-green
              servicePort: 8080
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: clin-fhir-server-blue
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: 10m
    nginx.ingress.kubernetes.io/proxy-read-timeout: "300"
spec:
  tls:
    - hosts:
        - fhir-blue.qa.clin.ferlab.bio
      secretName: letsencrypt-certificate
  rules:
    - host: fhir-blue.qa.clin.ferlab.bio
      http:
        paths:
          - path: /
            backend:
              serviceName: clin-fhir-server-blue
              servicePort: 8080
